# LFAN-Net

./: .gitignore  README.md  pyproject.toml  train.py
cfg/: __init__.py  default.yaml
cfg/models/FAN-Net/: fan_yolo11l_fast.yaml  fan_yolo11x.yaml
cli/: parser.py
data/: annotator.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split.py  split_dota.py  utils.py
engine/: exporter.py  model.py  predictor.py  results.py  trainer.py  tuner.py  validator.py
hub/: __init__.py  auth.py  session.py  utils.py
hub/google/: __init__.py
models/utils/: loss.py  ops.py
models/yolo/: __init__.py  model.py
models/yolo/detect/: predict.py  train.py  val.py
nn/: autobackend.py  tasks.py  text_model.py
nn/modules/: __init__.py  block.py  conv.py  fan.py  head.py
utils/: __init__.py  autobatch.py  autodevice.py  benchmarks.py  checks.py  dist.py  downloads.py  errors.py  export.py  files.py  loss.py  metrics.py  ops.py  patches.py  plotting.py  torch_utils.py  tuner.py
utils/callbacks/: base.py  clearml.py  comet.py  dvc.py  hub.py  mlflow.py  neptune.py  raytune.py  tensorboard.py  wb.py
