[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfan-net"
dynamic = ["version"]
description = "Minimal LFAN-Net training code for tiny object detection."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
dependencies = [
    "numpy>=1.23.0",
    "matplotlib>=3.3.0",
    "opencv-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.64.0",
    "psutil",
    "py-cpuinfo",
    "pandas>=1.1.4",
    "ultralytics-thop>=2.0.0",
]

[project.scripts]
lfan = "cfg:entrypoint"

[tool.setuptools]
packages = { find = { where = ["."], include = ["cfg", "cfg.*", "cli", "cli.*", "data", "data.*", "engine", "engine.*", "hub", "hub.*", "models", "models.*", "nn", "nn.*", "utils", "utils.*"] } }
py-modules = ["version", "train"]
package-data = { "cfg" = ["**/*.yaml"] }

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }
